# aws-servless-api-wrapper

./: .gitignore  docker-compose.yml  package.json  serverless.yml
functions/: rustfmt.toml
functions/api/: Cargo.toml  Cross.toml
functions/api/src/: main.rs
