[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.6.0"
serde = "1.0.140"
serde_json = "1.0.82"
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
reqwest = { version = "0.11.13", features = ["json"] }

[dependencies.openssl]
features= ["vendored"]
